--- a/blocks/element/__button/element__button.css
+++ b/blocks/element/__button/element__button.css
@@ -3,7 +3,7 @@
     border: none;
     margin-right: 30px;
     padding: 0;
-    background-image: url(../../../images/like.png);
+    background-image: url(../../../images/like.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: initial;
