--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,6 +1,6 @@
 .profile__add-button {
     background-color: transparent;
-    background-image: url(../../../images/Vector.png);
+    background-image: url(../../../images/add-button.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: initial;
