--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,6 +1,7 @@
 .profile__edit-button {
     background-color: transparent;
-    background-image: url(../../../images/Edit\ Button.png);
+    background-image: url(../../../images/edit-button.svg);
+    background-size: cover;
     padding: 0;
     border: none;
     width: 24px;
@@ -13,4 +14,12 @@
 
 .profile__edit-button:hover {
     opacity: 0.6;
+}
+
+@media screen and (max-width: 520px) {
+    .profile__edit-button {
+        width: 18px;
+        height: 18px;
+        margin-left: 10px;
+    }
 }
