--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -7,7 +7,7 @@
     border: 2px solid #fff;
     border-radius: 2px;
     padding: 0;
-    width: 150px;
+    min-width: 150px;
     height: 50px;
     font-family: 'Inter';
     font-size: 22px;
@@ -26,7 +26,7 @@
 
 @media screen and (max-width: 680px) {
     .profile__add-button {
-        width: 282px;
+        min-width: 282px;
         margin-top: 36px;
     }
 }
