--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 
 @media screen and (max-width: 1280px) {
