--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,7 @@
 .page {
     background-color: #000;
     min-width: 320px;
+    min-height: 100vh;
     margin: 0 auto;
     color: #fff;
     font-family: 'Inter', Helvetica, Arial, sans-serif;
