--- a/pages/index.css
+++ b/pages/index.css
@@ -26,6 +26,7 @@
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__text/popup__text.css);
+@import url(../blocks/popup/__text/_type/popup__text_type_error.css);
 @import url(../blocks/popup/__text/_type/popup__text_type_title.css);
 @import url(../blocks/popup/__text/_type/popup__text_type_link.css);
 @import url(../blocks/popup/__submit-button/popup__submit-button.css);
@@ -33,3 +34,7 @@
 @import url(../blocks/popup/__image-box/popup__image-box.css);
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__image-title/popup__image-title.css);
+@import url(../blocks/popup/__text-error/popup__text-error.css);
+@import url(../blocks/popup/__text-error/_active/popup__text-error_active.css);
+@import url(../blocks/popup/__form-field/popup__form-field.css);
+@import url(../blocks/popup/__submit-button/_inactive/popup__submit-button_inactive.css);
