--- a/pages/index.css
+++ b/pages/index.css
@@ -6,6 +6,8 @@
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/avatar/avatar.css);
+@import url(../blocks/profile/__avatar-block/profile__avatar-block.css);
+@import url(../blocks/profile/__wrap-edit/profile__wrap-edit.css);
 @import url(../blocks/profile/__text-info/profile__text-info.css);
 @import url(../blocks/profile/__name/profile__name.css);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
@@ -15,6 +17,8 @@
 @import url(../blocks/element/element.css);
 @import url(../blocks/element/__photo/element__photo.css);
 @import url(../blocks/element/__title/element__title.css);
+@import url(../blocks/element/__block-likes/element__block-likes.css);
+@import url(../blocks/element/__like-counter/element__like-counter.css);
 @import url(../blocks/element/__button/element__button.css);
 @import url(../blocks/element/__button/_active/element__button_active.css);
 @import url(../blocks/element/__button-trash/element__button-trash.css);
@@ -38,3 +42,4 @@
 @import url(../blocks/popup/__text-error/_active/popup__text-error_active.css);
 @import url(../blocks/popup/__form-field/popup__form-field.css);
 @import url(../blocks/popup/__submit-button/_inactive/popup__submit-button_inactive.css);
+@import url(../blocks/popup/__confirm-button/popup__confirm-button.css);
